--- a/css/base.css
+++ b/css/base.css
@@ -29,6 +29,7 @@ body {
 
 h1{
     font-weight: bold!important;
+    word-break: break-word;
 }
 
 html{
@@ -94,6 +95,11 @@ html{
     margin: 5px;
 }
 
+#faketext:hover{
+    display: none;
+}
+
 .fk{
     background-image: url('../img/fake.jpeg')!important;
 }
+
