--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,5 @@
 :root{
-    --shadow_color: red;
+    --shadow_color: aliceblue;
 }
 
 body {
@@ -95,8 +95,22 @@ html{
     margin: 5px;
 }
 
+.madmadmad{
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 16px;
+    color: white;
+    font-weight: bold;
+    text-shadow: 0 0 4px black;
+}
+
 #faketext:hover{
     display: none;
+}
+
+#faketext:hover ~ .madmadmad{
+    display: block;
 }
 
 .fk{
