--- a/bc92ff4964820689c3477753b795f8734ca52300/css/base.css
+++ b/bc92ff4964820689c3477753b795f8734ca52300/css/base.css
@@ -47,6 +47,12 @@ html{
 .box{
     background-color: rgb(240 248 255 / 80%);
     border-radius: 10px;
+    padding: 5px 20px;
+    margin: 5px 0;
+}
+
+.box p{  
+    text-align: justify!important;
 }
 
 .reaction-icons{
