--- a/bc92ff4964820689c3477753b795f8734ca52300/css/base.css
+++ b/bc92ff4964820689c3477753b795f8734ca52300/css/base.css
@@ -10,13 +10,6 @@ body {
     background-attachment: fixed;
 }
 
-@media screen and (max-width: 600px) {
-    body{
-        background-repeat: repeat;
-        background-size: contain;
-    }
-    
-}
 #header_div,
 #second_div{
     height: 100vh;
@@ -62,6 +55,7 @@ html{
     top: 50%;
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
+    width: 95%;
 }
 
 .box{
@@ -142,5 +136,17 @@ html{
 
 .fk{
     background-image: url('../img/fake.jpeg')!important;
+}
+
+
+@media screen and (max-width: 600px) {
+    body{
+        background-repeat: repeat;
+        background-size: contain;
+    }
+    .header_title h1{
+        font-size: 40px;
+    }
+    
 }
 
